--- a/media/css/mozorg/home/home-en-US.less
+++ b/media/css/mozorg/home/home-en-US.less
@@ -277,7 +277,7 @@ main {
 }
 
 // *** INTRO *** //
-#intro {
+.home-en-US #intro {
     background: url('/media/img/home/new/b/graph-paper-tile.png') top left repeat;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 70%, rgba(255, 255, 255, 0.95) 100%),
                 radial-gradient(ellipse at center, rgba(255,255,255,0) 0%, rgba(40,100,168,0.25) 100%),
@@ -392,7 +392,7 @@ main {
 
 // flexbox layout for savvy browsers
 @supports (display: flex) {
-    #intro .content {
+    .home-en-US #intro .content {
         .flexbox;
         .flex-direction(column);
         height: 300px;
@@ -500,9 +500,17 @@ main {
     .icon-link(33px, -196px);
 }
 
-.slider-content {
+.section-content {
     padding: 10px 20px 20px;
     text-align: center;
+
+    &:before {
+        content: '';
+        display: block;
+        height: 250px;
+        margin-bottom: 20px;
+        background-repeat: no-repeat;
+    }
 
     p {
         padding-bottom: 20px;
@@ -521,47 +529,35 @@ main {
     }
 }
 
-.slider-cover .slider-content {
-    padding-top: 250px;
-}
-
-.slider-detail-headline {
+.section-headline {
     margin-bottom: 20px;
 }
 
-#who {
-    .slider-cover,
-    .slider-detail {
-        background: #fff;
-        color: @fontDark;
+#who .section-content {
+    background: #fff;
+    color: @fontDark;
 
-        a {
-            color: #00A7E0;
-        }
+    &:before {
+        .at2x('/media/img/home/new/b/sketchy-m.png', 200px, 200px);
+        background-position: center;
     }
 
-    .slider-cover {
-        .at2x('/media/img/home/new/b/sketchy-m.png', 200px, 200px);
-        background-position: center 36px;
-        background-repeat: no-repeat;
+    a {
+        color: #00A7E0;
     }
 }
 
-#innovate {
-    .slider-cover,
-    .slider-detail {
-        background: #008B89;
-        color: #fff;
+#innovate .section-content {
+    background: #008B89;
+    color: #fff;
 
-        a {
-            color: #fff;
-        }
+    &:before {
+        .at2x('/media/img/home/new/b/a-frame.png', 200px, 200px);
+        background-position: center;
     }
 
-    .slider-cover {
-        .at2x('/media/img/home/new/b/a-frame.png', 200px, 200px);
-        background-position: center 40px;
-        background-repeat: no-repeat;
+    a {
+        color: #fff;
     }
 }
 
@@ -734,6 +730,85 @@ main {
         &.visible {
             display: block;
         }
+    }
+}
+
+
+// Externals (Add-ons, careers, support)
+.section-externals {
+    background: #f5f5f5;
+    text-align: center;
+
+    ul {
+        position: relative;
+        padding: 60px 0 40px;
+        .clearfix;
+
+        li {
+            max-width: @width-phone-wide;
+            margin: 0 auto 30px;
+
+            @media @mq-tablet {
+                float: left;
+                width: 33.3%;
+                margin: 0;
+            }
+        }
+    }
+
+    h3 {
+        .font-size(18px);
+        color: @color-text-secondary;
+        padding-top: 100px;
+        position: relative;
+
+        &:before {
+            .background-size(fill);
+            background-position: center center;
+            background-repeat: no-repeat;
+            content: '';
+            height: 84px;
+            left: 0;
+            position: absolute;
+            top: 0;
+            width: 100%;
+        }
+
+        @media @mq-tablet {
+            .font-size(20px);
+        }
+    }
+
+    a {
+        display: block;
+        padding: 0 20px;
+        text-align: center;
+        text-decoration: none;
+
+        &.add-ons h3:before {
+            background-image: url('/media/img/home/new/icon-addons.svg');
+        }
+        &.careers h3:before {
+            background-image: url('/media/img/home/new/icon-careers.svg');
+        }
+        &.help h3:before {
+            background-image: url('/media/img/home/new/icon-help.svg');
+        }
+
+        &:hover,
+        &:active,
+        &:focus {
+            text-decoration: none;
+
+            h3 {
+                text-decoration: underline;
+            }
+        }
+    }
+
+    p {
+        .font-size(16px);
+        color: @color-text-secondary;
     }
 }
 
