Fix Bug 1295330 - FxHello Audit - Remove Hello from style guide

--- a/bedrock/styleguide/templates/styleguide/communications/copy-rules.html
+++ b/bedrock/styleguide/templates/styleguide/communications/copy-rules.html
@@ -63,7 +63,7 @@
     <dt id="firefox-beta-for-mobile">Firefox Beta for mobile</dt>
     <dd>“Beta for mobile” is also acceptable, but never “mobile Beta;” mobile is always lowercase</dd>
     <dt id="firefox-browser">Firefox browser</dt>
-    <dd>use this to differentiate from the Firefox family of products or from another specific Firefox product (Firefox Marketplace, Firefox Hello, etc.); browser is always lowercase</dd>
+    <dd>use this to differentiate from the Firefox family of products or from another specific Firefox product (Firefox Marketplace, etc.); browser is always lowercase</dd>
     <dt id="firefox-developer-edition">Firefox Developer Edition</dt>
     <dd>Firefox Developer Edition on first mention, Developer Edition on subsequent mentions, both words always capitalized</dd>
     <dt id="firefox-for-android">Firefox for Android</dt>
