[fix bug 1295512] Remove animation & testing code from /firefox/new/

--- a/bedrock/firefox/templates/firefox/new/horizon/scene1.html
+++ b/bedrock/firefox/templates/firefox/new/horizon/scene1.html
@@ -15,7 +15,7 @@
 {% block body_id %}firefox-new-scene1{% endblock %}
 
 {% block content %}
-<main role="main" data-version="{{ version }}">
+<main role="main">
   <div class="main-container">
     <div class="horizon">
       <div class="stars">
