--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -303,12 +303,14 @@
           {# L10n: Line break below is for visual formatting only. #}
           <span>{{ _('active Mozillians <br>worldwide') }}</span>
         </li>
+        {% if events_count() %}
         <li>
           <span class="stat organizations">{{ events_count()|l10n_format_number }}</span>
           {# L10n: This label is preceeded by a numeric count before the translation. #}
           {# L10n: Line break below is for visual formatting only. #}
           <span>{{ _('upcoming events <br>around the globe') }}</span>
         </li>
+        {% endif %}
         <li>
           <span class="stat countries">{{ num_languages|l10n_format_number }}</span>
           {# L10n: This label is preceeded by a numeric count before the translation. #}
