--- a/bedrock/thunderbird/templates/thunderbird/start/base-resp.html
+++ b/bedrock/thunderbird/templates/thunderbird/start/base-resp.html
@@ -9,6 +9,7 @@
     <meta name="robots" content="noindex">
     <title>{% filter striptags|e %}{% block title %}{% endblock %}{% endfilter %}</title>
     {{ l10n_css() }}
+    {% javascript 'site' %}
     {% block google_analytics %}
       {% include 'includes/google-analytics.html' %}
     {% endblock %}
