--- a/bedrock/mozorg/templates/mozorg/mission.html
+++ b/bedrock/mozorg/templates/mozorg/mission.html
@@ -23,52 +23,70 @@
 {% endblock %}
 
 {% block content %}
-<article id="main-content">
-  <h1 class="title-shadow-box">{{ _('We’re building a better Internet') }}</h1>
+<main>
+  <header class="page-header">
+    <h1><span class="content">{{ _('We’re building a better Internet') }}</span></h1>
+  </header>
 
-  <div class="main">
-    {% if l10n_has_tag('bug_1251061_copy_update') %}
-    <p>{{ _('Our mission is to ensure the Internet is a global public resource, open and accessible to all. An Internet that truly puts people first, where individuals can shape their own experience and are empowered, safe and independent.') }}</p>
-    {% else %}
-    <p class="lede">{{ _('Our mission is to promote openness, innovation & opportunity on the Web.') }}</p>
-    {% endif %}
-    <p>{{ _('At Mozilla, we’re a global community of technologists, thinkers and builders working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web.') }}
-    {{ _('We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.') }}</p>
-    <p>{{ _('Read the <a href="%(url)s">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.') | format(url=url('mozorg.about.manifesto')) }}</p>
+  <div class="section">
+    <div class="content content-main">
 
-  </div>
+      <div class="main">
+        {% if l10n_has_tag('bug_1251061_copy_update') %}
+        <p class="lede">{{ _('Our mission is to ensure the Internet is a global public resource, open and accessible to all. An Internet that truly puts people first, where individuals can shape their own experience and are empowered, safe and independent.') }}</p>
+        {% else %}
+        <p class="lede">{{ _('Our mission is to promote openness, innovation & opportunity on the Web.') }}</p>
+        {% endif %}
+        <p>{{ _('At Mozilla, we’re a global community of technologists, thinkers and builders working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web.') }}
+        {{ _('We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.') }}</p>
+        <p>{{ _('Read the <a href="%(url)s">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.') | format(url=url('mozorg.about.manifesto')) }}</p>
+      </div>
 
-  <div class="video">
-    <div class="moz-video-container">
-      <button class="moz-video-button" type="button" aria-controls="htmlPlayer">{{ _('Play video') }}</button>
-      {{ video('Mozilla_2011_Story.webm',
-               'Mozilla_2011_Story.ogv',
-               'Mozilla_2011_Story.mp4',
-               h=259, w=460,
-               prefix='//videos.cdn.mozilla.net/brand/',
-               poster=static('img/mission/poster-mission.jpg')) }}
+      <div class="video">
+        <div class="moz-video-container">
+          <button class="moz-video-button" type="button" aria-controls="htmlPlayer">{{ _('Play video') }}</button>
+          {{ video('Mozilla_2011_Story.webm',
+                   'Mozilla_2011_Story.ogv',
+                   'Mozilla_2011_Story.mp4',
+                   h=259, w=460,
+                   prefix='//videos.cdn.mozilla.net/brand/',
+                   poster=static('img/mission/poster-mission.jpg')) }}
+        </div>
+        <p class="caption">{{ _('Watch the video above to learn more about who we are, where we came from and how we’re making the Web better for you.') }}</p>
+      </div>
+
+      <ul class="links">
+        <li>
+          <h4><a href="{{ url('mozorg.contribute.index') }}">{{ _('Get involved') }}</a></h4>
+          <p>{{ _('Volunteer opportunities in a number of different areas') }}</p>
+        </li>
+        <li>
+          <h4><a href="{{ url('mozorg.about.history') }}">{{ _('History') }}</a></h4>
+          <p>{{ _('Where we come from and how we got to where we are') }}</p>
+        </li>
+        <li>
+          <h4><a href="{{ url('mozorg.about.forums.forums') }}">{{ _('Forums') }}</a></h4>
+          <p>{{ _('Topics include support, products, and technologies') }}</p>
+        </li>
+        <li>
+          <h4><a href="{{ url('mozorg.about.governance.governance') }}">{{ _('Governance') }}</a></h4>
+          <p>{{ _('Our structure, organization, and the broader Mozilla community') }}</p>
+        </li>
+      </ul>
+
     </div>
-    <p class="caption">{{ _('Watch the video above to learn more about who we are, where we came from and how we’re making the Web better for you.') }}</p>
   </div>
+</main>
+{% endblock %}
 
-  <ul class="links">
-    <li>
-      <h4><a href="{{ url('mozorg.contribute.index') }}">{{ _('Get involved') }}</a></h4>
-      <p>{{ _('Volunteer opportunities in a number of different areas') }}</p>
-    </li>
-    <li>
-      <h4><a href="{{ url('mozorg.about.history') }}">{{ _('History') }}</a></h4>
-      <p>{{ _('Where we come from and how we got to where we are') }}</p>
-    </li>
-    <li>
-      <h4><a href="{{ url('mozorg.about.forums.forums') }}">{{ _('Forums') }}</a></h4>
-      <p>{{ _('Topics include support, products, and technologies') }}</p>
-    </li>
-    <li>
-      <h4><a href="{{ url('mozorg.about.governance.governance') }}">{{ _('Governance') }}</a></h4>
-      <p>{{ _('Our structure, organization, and the broader Mozilla community') }}</p>
-    </li>
-  </ul>
-
-</article>
+{% block email_form %}
+  <aside id="newsletter-subscribe">
+    <div class="content container">
+    {% if LANG.startswith('en-') %}
+      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Sign up. Read up.<br> Make a difference.'), subtitle=_('Get the Mozilla newsletter and help us keep the Web free and open.'), button_class='red') }}
+    {% else %}
+      {{ email_newsletter_form(button_class='red') }}
+    {% endif %}
+    </div>
+  </aside>
 {% endblock %}
