--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/devtools-challenger.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/devtools-challenger.html
@@ -34,9 +34,9 @@
         <h4>{{ _('Get involved') }}</h4>
           {% set url = 'https://wiki.mozilla.org/Contribute/Webdev' %}
           {% if l10n_has_tag('target-links-noopener') %}
-            {{ _('<a href="%s" id="get-involved" target="_blank" rel="external noopener noreferrer">Join the Webdev Contribute Group</a>  and start collaborating with other Mozillians around the world.')|format(url) }}
+            {{ _('<a href="%s" id="get-involved">Join the Webdev Contribute Group</a> and start collaborating with other Mozillians around the world.')|format(url) }}
           {% else %}
-            {{ _('<a href="%s" id="get-involved" target="_blank">Join the Webdev Contribute Group</a>  and start collaborating with other Mozillians around the world.')|format(url) }}
+            {{ _('<a href="%s" id="get-involved" target="_blank">Join the Webdev Contribute Group</a> and start collaborating with other Mozillians around the world.')|format(url) }}
           {% endif %}
       </div>
     </li>
