--- a/bedrock/mozorg/templates/mozorg/about/manifesto.html
+++ b/bedrock/mozorg/templates/mozorg/about/manifesto.html
@@ -310,21 +310,8 @@
           {{ email_newsletter_form() }}
         </section>
       </div>
-      <div id="mosaic-group-1" class="ri-grid" data-loading="{{ static('img/mozorg/about/manifesto/mosaic/loading.gif') }}">
-        <ul>
-        {% for i in range(1, 40)|list|shuffle %}
-          <li><a><img data-src="{{ static('img/mozorg/about/manifesto/mosaic/' ~ '%03d'|format(i) ~ '.jpg') }}" alt=""></a></li>
-        {% endfor %}
-        </ul>
-      </div>
-      <div id="mosaic-group-2" class="ri-grid" data-loading="{{ static('img/mozorg/about/manifesto/mosaic/loading.gif') }}">
-        <ul>
-        {# The grid needs 36 + extra images to rotate. That's why there are some duplicated images. #}
-        {% for i in range(30, 69)|list|shuffle %}
-          <li><a><img data-src="{{ static('img/mozorg/about/manifesto/mosaic/' ~ '%03d'|format(i) ~ '.jpg') }}" alt=""></a></li>
-        {% endfor %}
-        </ul>
-      </div>
+      <div id="mosaic-column-1" class="mosaic-column"></div>
+      <div id="mosaic-column-2" class="mosaic-column"></div>
     </div>
   </article>
 </main>
@@ -337,7 +324,6 @@
   <!--[if IE 9]>
     {% javascript 'matchmedia_addlistener' %}
   <![endif]-->
-  {% javascript 'mosaic' %}
   {% javascript 'manifesto' %}
 {% endblock %}
 
