--- a/bedrock/firefox/templates/firefox/all.html
+++ b/bedrock/firefox/templates/firefox/all.html
@@ -4,33 +4,51 @@
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {% block page_title %}
-  {% if platform == 'android' %}
+  {%- if platform == 'android' -%}
     {{ _('Download %s for Android in your language')|format(channel_label) }}
-  {% else %}
+  {%- else -%}
     {{ _('Download %s in your language')|format(channel_label) }}
-  {% endif %}
+  {%- endif -%}
+{% endblock %}
+
+{% block page_favicon %}
+  {%- if channel == 'nightly' -%}
+    {{ static('img/firefox/favicon-nightly.png') }}
+  {%- else -%}
+    {{ super() }}
+  {%- endif -%}
+{% endblock %}
+
+{% block twitter_id %}
+  {%- if channel == 'nightly' -%}
+    FirefoxNightly
+  {%- else -%}
+    {{ super() }}
+  {%- endif -%}
 {% endblock %}
 
 {% block body_id %}firefox-all{% endblock %}
 
 {% block page_desc %}
-  {% if channel == 'beta' %}
+  {%- if channel == 'beta' -%}
     {{ _('Download Firefox Beta in your language and experience cutting edge features before they make it to final release. Provide feedback to help us refine and polish the next version of Firefox.') }}
-  {% elif channel == 'alpha' %}
+  {%- elif channel == 'alpha' -%}
     {{ _('Download Firefox Developer Edition in your language to experience the newest features and innovations in an unstable environment even before they go to Beta. Give us feedback that will determine what makes it to Final Release and help shape the future of Firefox.') }}
-  {% elif channel == 'esr' %}
+  {%- elif channel == 'nightly' -%}
+    {{ _('Are you a power-user comfortable installing pre-alpha software? Install Nightly and help us improve Firefox quality, hunt crashes and regressions and test new features as they get coded!') }}
+  {%- elif channel == 'esr' -%}
     {{ _('Firefox ESR is intended for groups who deploy and maintain the desktop environment in large organizations. <a href="%s">Learn more.</a>')|format(url('firefox.organizations.organizations')) }}
-  {% else %}
+  {%- else -%}
     {{ _('Firefox is made in large part by volunteers around the world. That’s why we offer it in 80 languages (and why there’s heart and soul in every piece of code).') }}
-  {% endif %}
+  {%- endif -%}
 {% endblock %}
 
 {% block page_image %}
-  {% if channel == 'aurora' %}
+  {%- if channel == 'aurora' -%}
     {{ static('img/firefox/developer/page-image.png') }}
-  {% else %}
+  {%- else -%}
     {{ static('img/firefox/all/page-image.png') }}
-  {% endif %}
+  {%- endif -%}
 {% endblock %}
 
 {% block body_class -%}
@@ -44,6 +62,8 @@
 {% block site_header_logo %}
   {% if channel == 'alpha' %}
     <h2><a href="{{ url('firefox.developer') }}">{{ high_res_img('firefox/developer/title.png', {'alt': _('Firefox Developer Edition'), 'width': '220', 'height': '84'}) }}</a></h2>
+  {% elif channel == 'nightly' %}
+    <h2>{{ high_res_img('firefox/template/header-logo-nightly.png', {'alt': _('Firefox Nightly'), 'width': '305', 'height': '70'}) }}</h2>
   {% else %}
     {{ super() }}
   {% endif %}
@@ -61,9 +81,16 @@
   <header id="main-feature">
     <h1>{{ self.page_title()  }}</h1>
     <h2>{{ self.page_desc() }}</h2>
-    <p><a class="sysreq" href="{{ firefox_url(platform, 'sysreq', channel) }}">{{ _('Check the system requirements') }}</a><br />
-    <a class="sysreq" href="{{ firefox_url(platform, 'notes', channel) }}">{{ _('Release notes') }}</a><br />
-    <a class="sysreq" href="https://developer.mozilla.org/docs/Mozilla/Developer_guide/Source_Code">{{ _('Source code') }}</a></p>
+    {% if channel == 'nightly' %}
+    <p class="warning">{{ _('<strong>Warning</strong>: Nightly is updated daily. It is most appropriate for core Mozilla contributors and early adopters, not regular users.') }}</p>
+    {% endif %}
+    <ul>
+      {% if channel != 'nightly' %}
+      <li><a href="{{ firefox_url(platform, 'sysreq', channel) }}">{{ _('Check the system requirements') }}</a></li>
+      <li><a href="{{ firefox_url(platform, 'notes', channel) }}">{{ _('Release notes') }}</a></li>
+      {% endif %}
+      <li><a href="https://developer.mozilla.org/docs/Mozilla/Developer_guide/Source_Code">{{ _('Source code') }}</a></li>
+    </ul>
   </header>
 
   {{ build_search_box(query, full_builds, test_builds) }}
