Fixes bug #1301472 - added 2 links to /gigabit/apply page

--- a/bedrock/gigabit/templates/gigabit/apply.html
+++ b/bedrock/gigabit/templates/gigabit/apply.html
@@ -139,8 +139,8 @@
             {% endtrans %}
             </li>
             <li>
-            {% trans url_gigabit_application_form='https://drive.google.com/file/d/0B9NqWPTRsfNXNjlKT0tMVlcySlhfZmVlQTBINXVrN0FSVlI0/view' %}
-              Prepare your application using our <a href='{{ url_gigabit_application_form }}'>application form</a>.
+            {% trans url_gigabit_application_form='https://drive.google.com/file/d/0B9NqWPTRsfNXNjlKT0tMVlcySlhfZmVlQTBINXVrN0FSVlI0/view', url_faq='https://mzl.la/GCF_FAQ' %}
+              Prepare your application using our <a href='{{ url_gigabit_application_form }}'>application form</a> and <a href='{{ url_faq }}'>frequently asked questions document</a>.
             {% endtrans %}
             </li>
             <li>
@@ -151,6 +151,11 @@
             <li>
             {% trans url_startupCompete='//gigabitfund2016.startupcompete.co/' %}
               Register on our <a href='{{ url_startupCompete }}'>StartupCompete site</a> and submit your application for review.
+            {% endtrans %}
+            </li>
+            <li>
+            {% trans url_video='https://vimeo.com/180975946' %}
+              Watch this <a href='{{ url_video }}'>video</a> walking you through the full application process.
             {% endtrans %}
             </li>
           </ol>
