--- a/bedrock/firefox/templates/firefox/nightly_firstrun.html
+++ b/bedrock/firefox/templates/firefox/nightly_firstrun.html
@@ -15,9 +15,13 @@
 {% add_lang_files "firstrun" "mobile" %}
 
 {% block page_title_prefix %}{% endblock %}
-{% block page_favicon %}{{ static('img/firefox/favicon-nightly.png') }}{% endblock %}
+{% block page_favicon %}{{ static('img/firefox/nightly/favicon.png') }}{% endblock %}
+{% block page_favicon_large %}{{ static('img/firefox/nightly/favicon-196.png') }}{% endblock %}
+{% block page_image %}{{ static('img/firefox/nightly/page-image.png') }}{% endblock %}
 {% block page_title %}{{ _('Firefox Nightly First Run Page') }}{% endblock %}
 {% block page_title_suffix %}{% endblock %}
+{% block page_og_url %}{{ url('firefox.all', channel='nightly') }}{% endblock %}
+
 {% block body_id %}firefox-firstrun{% endblock %}
 
 {% block site_header_nav %}{% endblock %}
