--- a/bedrock/firefox/templates/firefox/nightly_whatsnew.html
+++ b/bedrock/firefox/templates/firefox/nightly_whatsnew.html
@@ -15,9 +15,12 @@
 {% endblock %}
 
 {% block page_title_prefix %}{% endblock %}
-{% block page_favicon %}{{ static('img/firefox/favicon-nightly.png') }}{% endblock %}
+{% block page_favicon %}{{ static('img/firefox/nightly/favicon.png') }}{% endblock %}
+{% block page_favicon_large %}{{ static('img/firefox/nightly/favicon-196.png') }}{% endblock %}
+{% block page_image %}{{ static('img/firefox/nightly/page-image.png') }}{% endblock %}
 {% block page_title %}{{ _('You’ve just been upgraded to Firefox Nightly %(version)s!')|format(version=num_version) }}{% endblock %}
 {% block page_title_suffix %}{% endblock %}
+{% block page_og_url %}{{ url('firefox.all', channel='nightly') }}{% endblock %}
 
 {% block body_id %}nightly-whatsnew{% endblock %}
 {% block body_class %}{% endblock %}
