[bug 1303470] Update SVP titles

--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -326,7 +326,7 @@
         </figure>
 
         <div class="person-info">
-          <p class="title" itemprop="jobTitle">{{ _('Senior Vice President, Connected Devices') }}</p>
+          <p class="title" itemprop="jobTitle">{{ _('SVP, Connected Devices') }}</p>
           <p class="note">{{ _('Steering Committee') }}</p>
           <p class="since">{{ _('With Mozilla since:') }} 2015</p>
 
@@ -418,7 +418,7 @@
         </figure>
 
         <div class="person-info">
-          <p class="title" itemprop="jobTitle">{{ _('Senior Vice President, Firefox') }}</p>
+          <p class="title" itemprop="jobTitle">{{ _('SVP, Firefox') }}</p>
           <p class="note">{{ _('Steering Committee') }}</p>
           <p class="since">{{ _('With Mozilla since:') }} 2011</p>
 
@@ -492,7 +492,7 @@
         </figure>
 
         <div class="person-info">
-          <p class="title" itemprop="jobTitle">{{ _('VP, Emerging Technologies') }}</p>
+          <p class="title" itemprop="jobTitle">{{ _('SVP, Emerging Technologies') }}</p>
           <p class="note">{{ _('Steering Committee') }}</p>
           <p class="since">{{ _('With Mozilla since:') }} 2016</p>
 
