[fix bug 1302772] new home page
* rename home-en-US.html to home.html
* rename old home.html to home-voices.html
* rename associated CSS/JS
* rename img/home/new to img/home/2016
* delete some old images no longer in use

--- a/media/css/mozorg/home/home-voices-promo.less
+++ b/media/css/mozorg/home/home-voices-promo.less
@@ -3,7 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import "../../sandstone/lib.less";
-@import "home-grid.less";
+@import "home-voices-grid.less";
 
 @font-face {
     font-family: 'FA-Icons-Home';
