--- a/media/css/mozorg/home/home-voices-ie8.less
+++ b/media/css/mozorg/home/home-voices-ie8.less
@@ -3,7 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import "../../sandstone/lib.less";
-@import "home-grid.less";
+@import "home-voices-grid.less";
 
 #outer-wrapper {
     min-width: @widthSquareGrid_6;
