--- a/bedrock/firefox/templates/firefox/firstrun/ravioli.html
+++ b/bedrock/firefox/templates/firefox/firstrun/ravioli.html
@@ -54,7 +54,8 @@
   <figure class="ravioli">
     {{ high_res_img('firefox/firstrun/ravioli.png', {'alt': 'Yahoo Search'}) }}
     <figcaption>
-      {{ _('Yahoo is one of Mozilla’s search partners. <a rel="external" href="%s">Learn more.</a>')|format('https://blog.mozilla.org/blog/2015/11/11/a-new-yahoo-search-experience-for-firefox-users-in-u-s/') }}
+      {{ _('Yahoo is one of Mozilla’s search partners.') }}
+      <a rel="external" href="https://blog.mozilla.org/blog/2015/11/11/a-new-yahoo-search-experience-for-firefox-users-in-u-s/">{{ _('Learn more.') }}</a>
     </figcaption>
   </figure>
 </main>
